included chat headers, fixed alignments for msg dates, alignment for chat msg, passed more variables to chat as props

--- a/src/components/Chat/ChatArea.css
+++ b/src/components/Chat/ChatArea.css
@@ -3,6 +3,7 @@
 }
 .ChatArea {
   margin-bottom: 10px;
+  align-self: flex-end;
 }
 .name {
   color: #5890bcff;
@@ -14,4 +15,17 @@
 }
 .name:hover {
   cursor: pointer;
+}
+
+.messages-header {
+  margin: 20px;
+}
+.messages-header-top-part {
+  margin-bottom: 10px;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+}
+.messages-header-top-part p {
+  margin-left: 10px;
 }
