--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -66,7 +66,6 @@
 }
 
 .direct-messages {
-  overflow: hidden;
   height: 0;
   transition: height 0.3s;
 }
